# RAGSearcher

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  build.rs  config.example.toml
.claude/: settings.local.json
crates/core/: Cargo.toml  build.rs
crates/core/benches/: indexing_benchmark.rs
crates/core/examples/: mcp_client.rs  test_git_search.rs
crates/core/src/: cache.rs  error.rs  glob_utils.rs  lib.rs  main.rs  mcp_server.rs  mcp_test_minimal.rs  paths.rs
crates/core/src/bm25_search/: mod.rs
crates/core/src/chunker/: mod.rs  pdf_extractor.rs
crates/core/src/chunker/strategies/: context_aware.rs  fixed.rs  hybrid.rs  mod.rs
crates/core/src/client/: fs_lock.rs  mod.rs
crates/core/src/client/git_indexing/: tests.rs
crates/core/src/config/: mod.rs
crates/core/src/document/: mod.rs  model.rs  normalize.rs
crates/core/src/embedding/: fastembed_manager.rs  mistralrs_manager.rs  mod.rs
crates/core/src/extraction/: algorithm_prompts.rs  algorithm_types.rs  algorithms.rs  claude_cli.rs  mod.rs  prompts.rs  types.rs
crates/core/src/indexer/: ast_parser.rs  chunker.rs  file_info.rs  mod.rs
crates/core/src/indexer/file_walker/: mod.rs  tests.rs
crates/core/src/mcp_server/: tests.rs
crates/core/src/metadata/: algorithms.rs  mod.rs  models.rs
crates/core/src/relations/: mod.rs  types.rs
crates/core/src/relations/repomap/: symbol_extractor.rs
crates/core/src/relations/storage/: lance_store.rs
crates/core/src/retrieval/: mod.rs
crates/core/src/tokenization/: mod.rs
crates/core/src/types/: mod.rs
crates/core/src/vector_db/: mod.rs  qdrant_client.rs
crates/core/src/vector_db/lance_client/: mod.rs  tests.rs
crates/core/src/web/: errors.rs  mod.rs  models.rs
crates/core/src/web/handlers/: algorithms.rs  mod.rs  papers.rs  patterns.rs  search.rs
crates/core/tests/: simple_integration.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: main.rs
docs/: deployment.md  extraction.md  index-locking.md  slash-commands.md  troubleshooting.md
docs/adr/: 001-lancedb-as-default-vector-database.md  002-hybrid-search-with-rrf.md  003-smart-indexing-with-auto-detection.md  README.md
examples/: advanced_search.rs  basic_indexing.rs
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/paper/[paperId]/algorithms/: page.tsx
frontend/src/app/paper/[paperId]/patterns/: page.tsx
frontend/src/app/paper/algorithms/: page.tsx
frontend/src/app/paper/patterns/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/app/review/[paperId]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: latex-renderer.tsx
frontend/src/components/nav/: main-nav.tsx
frontend/src/components/review/: algorithm-card.tsx  index.ts  pattern-card.tsx  review-summary.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  loading.tsx  select.tsx  textarea.tsx
frontend/src/components/upload/: file-upload.tsx  index.ts  metadata-form.tsx  text-input.tsx
frontend/src/lib/: api.ts  utils.test.ts
frontend/src/types/: index.ts
src/: git_cache.rs  lib.rs  main.rs  mcp_server.rs  paths.rs
src/bm25_search/: mod.rs
src/client/: index_lock.rs  mod.rs  tests.rs
src/client/git_indexing/: mod.rs
src/client/indexing/: mod.rs  tests.rs
src/embedding/: fastembed_manager.rs  mod.rs
src/extraction/: algorithm_types.rs  claude_cli.rs  mod.rs  prompts.rs  types.rs
src/git/: chunker.rs  mod.rs  walker.rs
src/indexer/: language.rs  mod.rs  pdf_extractor.rs
src/mcp_server/: tests.rs
src/metadata/: algorithms.rs  mod.rs  models.rs
src/relations/repomap/: mod.rs  reference_finder.rs
src/relations/storage/: mod.rs
src/types/: mod.rs  tests.rs
src/vector_db/: mod.rs  qdrant_client.rs
src/vector_db/lance_client/: mod.rs
src/web/: mod.rs  models.rs
src/web/handlers/: algorithms.rs  health.rs  mod.rs  papers.rs  patterns.rs  search.rs
tests/: git_search_integration.rs
zotero-plugin/: package-lock.json  package.json  tsconfig.json  update.json
zotero-plugin/addon/: bootstrap.js  manifest.json
zotero-plugin/addon/content/: pattern-dialog.xhtml  review-dialog.xhtml  search-dialog.xhtml
zotero-plugin/addon/locale/en-US/: addon.ftl
zotero-plugin/addon/prefs/: preferences.xhtml
zotero-plugin/scripts/: build.mjs
zotero-plugin/src/: index.ts
zotero-plugin/src/mcp/: client.ts  process.ts  types.ts
zotero-plugin/src/modules/: extraction.ts  item-pane.ts  menu.ts  pattern-extraction.ts  review-dialog.ts  search.ts  upload.ts
zotero-plugin/src/utils/: notify.ts  zotero-item.ts
zotero-plugin/typings/: global.d.ts
