[package]
name = "project-rag"
version = "0.1.0"
edition = "2024"
description = "RAG-based codebase indexing and semantic search - dual purpose library and MCP server"
authors = ["Brainwires"]
license = "MIT"
repository = "https://github.com/Brainwires/project-rag"
homepage = "https://github.com/Brainwires/project-rag"
documentation = "https://docs.rs/project-rag"
readme = "../../README.md"
rust-version = "1.88"
keywords = ["mcp", "rag", "embeddings", "semantic-search", "code-analysis"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".cache/",
    "docs/adr/",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "TESTING.md",
]

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
tokio = { version = "1.43", features = ["full"] }
# Vector databases - LanceDB is default (embedded, stable), Qdrant is optional (external)
lancedb = "0.23"
arrow-array = "56.2"
arrow-schema = "56.2"
futures = "0.3"
qdrant-client = { version = "1.15", optional = true }
fastembed = "5.1"
ort = { version = "=2.0.0-rc.11", features = ["coreml"] }
tantivy = "0.22"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2.0"
toml = "0.8"
# PDF processing
pdf-extract = "0.7"
lopdf = "0.34"
# HTTP client for URL downloads
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
# Web server
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
text-splitter = { version = "0.29.3", features = ["tokenizers", "markdown"] }
tokenizers = { version = "0.22.2", features = ["http"] }

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
chrono = "0.4"

[features]
# Vector database backend selection (choose one)
default = ["lancedb-backend"]
lancedb-backend = []  # Embedded LanceDB (no external server required)
qdrant-backend = ["qdrant-client"]  # External Qdrant server

# Alternative folder name for data storage (for consuming crates that want different folder)
alt-folder-name = []

[lib]
name = "project_rag"
path = "src/lib.rs"

[[bin]]
name = "rag-searcher"
path = "src/main.rs"

