[package]
name = "project-rag-desktop"
version = "0.1.0"
edition = "2024"
description = "RAGsearcher desktop application"
publish = false

[dependencies]
project-rag = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
